cpp/test/Slice/errorDetection/OptionalParams.err
OptionalParams.ice:30: missing tag
OptionalParams.ice:31: missing tag
OptionalParams.ice:32: 'abc' is not defined
OptionalParams.ice:33: tag is out of range
OptionalParams.ice:34: tag is out of range
OptionalParams.ice:35: tag is out of range
OptionalParams.ice:37: tag is out of range
OptionalParams.ice:37: invalid tag 'C3'
OptionalParams.ice:38: tag is out of range
OptionalParams.ice:38: invalid tag 'C4'
OptionalParams.ice:39: invalid tag 'C5'
OptionalParams.ice:42: syntax error
OptionalParams.ice:44: missing tag
OptionalParams.ice:45: missing tag
OptionalParams.ice:46: 'abc' is not defined
OptionalParams.ice:47: tag is out of range
OptionalParams.ice:48: tag is out of range
OptionalParams.ice:49: tag is out of range
OptionalParams.ice:51: tag is out of range
OptionalParams.ice:51: invalid tag 'C3'
OptionalParams.ice:52: tag is out of range
OptionalParams.ice:52: invalid tag 'C4'
OptionalParams.ice:53: invalid tag 'C5'
OptionalParams.ice:57: missing tag
OptionalParams.ice:58: missing tag
OptionalParams.ice:59: 'abc' is not defined
OptionalParams.ice:60: tag is out of range
OptionalParams.ice:61: tag is out of range
OptionalParams.ice:62: tag is out of range
OptionalParams.ice:64: tag is out of range
OptionalParams.ice:64: invalid tag 'C3'
OptionalParams.ice:65: tag is out of range
OptionalParams.ice:65: invalid tag 'C4'
OptionalParams.ice:66: invalid tag 'C5'
OptionalParams.ice:68: enumerator 'e1' could designate '::Test::E::e1' or '::Test::Ebis::e1'
OptionalParams.ice:72: tag for optional parameter 'o' is already in use
OptionalParams.ice:73: tag for optional parameter 'o' is already in use
OptionalParams.ice:74: tag for optional parameter 'o' is already in use
OptionalParams.ice:75: tag for optional parameter 'o' is already in use
OptionalParams.ice:80: types that use classes cannot be marked with 'optional'
OptionalParams.ice:82: types that use classes cannot be marked with 'optional'
OptionalParams.ice:83: types that use classes cannot be marked with 'optional'
OptionalParams.ice:87: types that use classes cannot be marked with 'optional'
OptionalParams.ice:88: types that use classes cannot be marked with 'optional'
OptionalParams.ice:90: types that use classes cannot be marked with 'optional'
